syntax = "proto3";

package movie_ticket_booking_api.v1.health_checks;

option csharp_namespace = "MovieTicketBookingApi.Protos.V1.HealthChecks";

import "Protos/google/api/annotations.proto";
import "Protos/shared/empty.proto";

service HealthCheck {
	rpc CheckHealth (shared.empty.EmptyRequest) returns (HealthCheckResponse) {
		option (google.api.http) = {
			get: "/v1/_health"
		};
	}
}

enum ServingStatus {
	SERVING = 0;
	NOT_SERVING = 1;
}

message HealthCheckResponse {
	ServingStatus status = 1;
}